# 250812-html-reader-mcp-server

./: .dockerignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yaml  test-docker.sh  test-mcp.sh  test_browser.py
application/: Cargo.toml
application/src/: lib.rs
application/src/service/: content_fetch_service.rs  content_parse_service.rs  mod.rs
application/src/use_case/: fetch_web_content_use_case.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/model/: content.rs  mod.rs  request.rs  response.rs
domain/src/port/: content_fetcher.rs  content_parser.rs  mod.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/adapter/: html_parser_adapter.rs  mod.rs
infrastructure/src/api/: server.rs
infrastructure/src/client/: browser_client.rs  http_client.rs  hybrid_fetcher.rs  mod.rs
infrastructure/src/mcp/: server.rs
runner/: Cargo.toml
runner/src/: main.rs
