[workspace]
members = [
    "domain",
    "application", 
    "infrastructure",
    "runner"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.216", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.86"
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
thiserror = "1.0"
regex = "1.0"
html-escape = "0.2"
