[workspace]
members = [
    "domain",
    "application", 
    "infrastructure",
    "runner"
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.89"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
scraper = "0.24.0"
thiserror = "2.0.16"
regex = "1.11.1"
html-escape = "0.2.13"
axum = "0.8.4"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
clap = { version = "4.5.45", features = ["derive"] }
atty = "0.2.14"
chromiumoxide = "0.7.0"
futures = "0.3.31"
