[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true }