[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
html-escape = { workspace = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
axum-test = "15.0"