[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "html-mcp-reader"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
infrastructure = { path = "../infrastructure" }
serde = { workspace = true }
serde_json = "1.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true }
atty = { workspace = true }